dev/router/envoy.yaml
static_resources:
  listeners:
    - name: q-n-a_proxy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.router
                route_config:
                  name: q-n-a
                  virtual_hosts:
                    - name: q-n-a
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/grpc/"
                          route:
                            prefix_rewrite: "/"
                            cluster: backend_grpc
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: backend_api
                            timeout: 0s
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend
                            timeout: 0s

  clusters:
    - name: backend_grpc
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: backend_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 9001
    - name: backend_api
      connect_timeout: 0.25s
      type: logical_dns
      load_assignment:
        cluster_name: backend_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 9000
    - name: frontend
      connect_timeout: 0.25s
      type: logical_dns
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: frontend
                      port_value: 80
